# freedom_convoy

./: .gitignore  .user.yml  Makefile  README.md  dagster.yaml  dbt_project.yml  discursus_mvp.db  main.R  profiles.yml  pyproject.toml
data/: media_sources.csv
discursus/: __init__.py
discursus/enhance_articles/: article_scraping.py
discursus/s3_sources/: s3_sources.py
discursus/stage_articles/: dbt_project.yml
discursus/stage_sources/: dbt_project.yml
freedom_convoy/: __init__.py
freedom_convoy/enhance_articles/: article_scraping.py
freedom_convoy/s3_sources/: s3_sources.py
freedom_convoy/stage_articles/: dbt_project.yml
freedom_convoy/stage_sources/: dbt_project.yml
freedom_convoy_playground/: __init__.py
freedom_convoy_playground/enhance_articles/: article_scraping.py
freedom_convoy_playground/s3_sources/: s3_sources.py
freedom_convoy_playground/stage_articles/: dbt_project.yml
freedom_convoy_playground/stage_sources/: dbt_project.yml
models/integration/: int__articles__filter_medias.sql
social_analytics_mvp/: __init__.py  social_analytics_mvp.db.wal
social_analytics_mvp/.aws/: credentials
social_analytics_mvp/dp_analytics/: dbt_project.yml
social_analytics_mvp/dp_data_prep/: article_scraping.py
social_analytics_mvp/dp_source_data/: dbt_project.yml
social_analytics_mvp/dp_source_prep/: dbt_project.yml
social_analytics_mvp/enhance_articles/: article_scraping.py
social_analytics_mvp/s3_sources/: s3_sources.py
social_analytics_mvp/stage_articles/: dbt_project.yml
social_analytics_mvp/stage_sources/: dbt_project.yml
social_data_playground/: __init__.py
social_data_playground/enhance_articles/: article_scraping.py
social_data_playground/s3_sources/: s3_sources.py
(+39 files in other folders)
