[tool.poetry]
name = "freedom_convoy"
version = "0.1.0"
description = ""
authors = ["Olivier Dupuis <odupuis@lantrns.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
dbt-core = "^1.6.6"
dbt-snowflake = "^1.6.5"
dagster = "^1.5.5"
dagster-dbt = "^0.21.5"
dagster-snowflake = "^0.21.5"
dagster-webserver = "^1.5.5"
bs4 = "^0.0.1"
pandas = "^2.0.3"
langchain = "0.0.321"
openai = "0.28.1"
snowflake-connector-python = {extras = ["pandas"], version = "^3.3.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
